// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card snapshot testing Card with not existing suit 1`] = `
<div
  className="col-1 card mb-1"
  onClick={[Function]}
>
  <div
    className="row"
  >
    <b
      className="ml-1"
    />
  </div>
  <div
    className="row"
  >
    <img
      alt=""
      className="littleSuitImg ml-1"
      src={undefined}
    />
  </div>
  <div
    className="row justify-content-center"
  >
    <img
      alt=""
      className="bigSuitImg my-2"
      src={undefined}
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <img
      alt=""
      className="littleSuitImg rotated mr-1"
      src={undefined}
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <b
      className="rotated mr-1"
    />
  </div>
</div>
`;

exports[`Card snapshot testing Card with suit Б 1`] = `
<div
  className="col-1 card mb-1"
  onClick={[Function]}
>
  <div
    className="row"
  >
    <b
      className="ml-1"
    >
      <b
        className="redText"
      >
        6
      </b>
    </b>
  </div>
  <div
    className="row"
  >
    <img
      alt=""
      className="littleSuitImg ml-1"
      src="diamond.png"
    />
  </div>
  <div
    className="row justify-content-center"
  >
    <img
      alt=""
      className="bigSuitImg my-2"
      src="diamond.png"
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <img
      alt=""
      className="littleSuitImg rotated mr-1"
      src="diamond.png"
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <b
      className="rotated mr-1"
    >
      <b
        className="redText"
      >
        6
      </b>
    </b>
  </div>
</div>
`;

exports[`Card snapshot testing Card with suit К 1`] = `
<div
  className="col-1 card mb-1"
  onClick={[Function]}
>
  <div
    className="row"
  >
    <b
      className="ml-1"
    >
      <b
        className="blackText"
      >
        6
      </b>
    </b>
  </div>
  <div
    className="row"
  >
    <img
      alt=""
      className="littleSuitImg ml-1"
      src="club.png"
    />
  </div>
  <div
    className="row justify-content-center"
  >
    <img
      alt=""
      className="bigSuitImg my-2"
      src="club.png"
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <img
      alt=""
      className="littleSuitImg rotated mr-1"
      src="club.png"
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <b
      className="rotated mr-1"
    >
      <b
        className="blackText"
      >
        6
      </b>
    </b>
  </div>
</div>
`;

exports[`Card snapshot testing Card with suit П 1`] = `
<div
  className="col-1 card mb-1"
  onClick={[Function]}
>
  <div
    className="row"
  >
    <b
      className="ml-1"
    >
      <b
        className="blackText"
      >
        6
      </b>
    </b>
  </div>
  <div
    className="row"
  >
    <img
      alt=""
      className="littleSuitImg ml-1"
      src="spade.png"
    />
  </div>
  <div
    className="row justify-content-center"
  >
    <img
      alt=""
      className="bigSuitImg my-2"
      src="spade.png"
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <img
      alt=""
      className="littleSuitImg rotated mr-1"
      src="spade.png"
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <b
      className="rotated mr-1"
    >
      <b
        className="blackText"
      >
        6
      </b>
    </b>
  </div>
</div>
`;

exports[`Card snapshot testing Card with suit Ч 1`] = `
<div
  className="col-1 card mb-1"
  onClick={[Function]}
>
  <div
    className="row"
  >
    <b
      className="ml-1"
    >
      <b
        className="redText"
      >
        6
      </b>
    </b>
  </div>
  <div
    className="row"
  >
    <img
      alt=""
      className="littleSuitImg ml-1"
      src="heart.png"
    />
  </div>
  <div
    className="row justify-content-center"
  >
    <img
      alt=""
      className="bigSuitImg my-2"
      src="heart.png"
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <img
      alt=""
      className="littleSuitImg rotated mr-1"
      src="heart.png"
    />
  </div>
  <div
    className="row justify-content-end"
  >
    <b
      className="rotated mr-1"
    >
      <b
        className="redText"
      >
        6
      </b>
    </b>
  </div>
</div>
`;
